lowering/src/snapshots/lowering__cfg__double.snap
---
source: src/lib.rs
expression: fn_hir.graph.graphviz_output()
---
digraph {
    0 [label="Entry"]
    1 [label="Exit"]
    2 [label="Block([LocalDefinition, LocalDefinition])"]
    0 -> 2 [label="Normal"]
    2 -> 1 [label="Normal"]
}

